--- a/index.html
+++ b/index.html
@@ -10,10 +10,11 @@
   <link rel="stylesheet" href="css/style.min.css">
 </head>
 <body>
-	<div class="main-wrapper">
-    <header class="main-header">
+	<header class="main-header">
 			<img src="img/Bunner.png" alt="Антигистаминные препараты в клинических рекомендациях">
-		</header>
+	</header>
+	<div class="main-wrapper">
+    
 		<main class="main-content">
 			<h1 class="main-title visually-hidden">Антигистаминные препараты в клинических рекомендациях</h1>
 			<div class="wrapper">
@@ -377,7 +378,7 @@
 			<section class="main-block text-block text-block--8" id="block7">
 				<div class="wrapper">
 					<h2 class="text-block__title">Хифенадин (фенкарол®)</h2>
-				</div>
+				<!-- </div> -->
 				  <div class="text-block__content">
 						<div class="wrapper">
               <p>
@@ -412,19 +413,19 @@
 					</div>
 				</div>
 			</section>
-			<section class="main-text text-block text-block--9">
+			<section class="main-text text-block text-block--9"> 
 				<div class="wrapper">
 					<span class="text-block__subtitle">Список литературы:</span>
 					<ul class="text-block__links">
 						<li id="link1">1. Tiligada E., Ennis M. Histamine pharmacology: from Sir Henry Dale to the 21st century. British Journal of Pharmacology. 2020;177:469–489.</li>
 						<li id="link2">2. Белан Э.Б., Гутов М.В. Антигистаминные производные хинуклидинов. Клиническая дерматология и венерология. 2010;(5):76–83.</li>
 						<li id="link3">3. Лусс Л.В., Ильина Н.И. Антигистаминные препараты в общеклинической практике: Вопросы и ответы. В помощь практическому врачу. 2017. 184 с.</li>
-						<li id="link4">4. Федеральные клинические рекомендации «Аллергический ринит», 2020. URL: https://cr.minzdrav.gov.ru/recomend/261_1</li>
+						<li id="link4">4. Федеральные клинические рекомендации «Аллергический ринит», 2020.  <i>URL: https://cr.minzdrav.gov.ru/recomend/261_1</i></li>
 						<li id="link5">5. Карева Е.Н. Выбор антигистаминного препарата: взгляд фармаколога. РМЖ. 2016;(12):811–816.</li>
 						<li id="link6">6. Лусс Л.В. Выбор антигистаминных препаратов в лечении аллергических и псевдоаллергических реакций. Астма та алергiя. 2010;(1-2):70–76.</li>
 						<li id="link7">7. Лесиовская Е.Е., Коноплева Е.В. Антиаллергические препараты: перспективы выбора.ФАРМиндекс-Практик. 2002;3:41.</li>
-						<li id="link8">8. Федеральные клинические рекомендации «Атопический дерматит», 2021. URL: https://cr.minzdrav.gov.ru/recomend/265_1</li>
-						<li id="link9">9. Федеральные клинические рекомендации «Экзема», 2021. URL: https://cr.minzdrav.gov.ru/recomend/246_1</li>
+						<li id="link8">8. Федеральные клинические рекомендации «Атопический дерматит», 2021.  <i>URL: https://cr.minzdrav.gov.ru/recomend/265_1</i></li>
+						<li id="link9">9. Федеральные клинические рекомендации «Экзема», 2021.  <i>URL: https://cr.minzdrav.gov.ru/recomend/246_1</i></li>
 						<li id="link10">10. Каминка М.Э., Чумбуридзе Т.Б., Спрышкова Р.А. Особенности фармакокинетики фенкарола-3Н при длительном применении. Химико-фармацевтический журнал. 1980;(8):12–15.</li>
 						<li id="link11">11. Головин Р.Р. Досвід використання препарату фенкарол при алергічній патології у дітей. Укр. мед. часопис. 2009;(3 (71));V/VI: 48–50.</li>
 						<li id="link12">12. Машковский М.Д., Мутина Е.С., Каминка М.Э. Фенкарол и его применение в терапии аллергических заболеваний. Клиническая медицина. 1978;58(11):22–27.</li>
@@ -434,11 +435,11 @@
 						<li id="link16">16. Резниченко Н.Ю., Резниченко Г.И., Каукэ Ю.И. Результаты клинического исследования сравнения эффективности и безопасности Хифенадина и Дезлоратадина у пациентов с аллергодерматозами. Дерматологія та венерологія. 2018;(1):56–66.</li>
 					</ul>
 				</div>
-			</section>
+			</section> 
 
-			
-		</main>
+		</main>	
 	</div>
+	<!-- </div> -->
   
 
 	
