--- a/index.html
+++ b/index.html
@@ -14,8 +14,7 @@
 			<img src="img/Bunner.png" alt="Антигистаминные препараты в клинических рекомендациях">
 	</header>
 	<div class="main-wrapper">
-    
-		<main class="main-content">
+    <main class="main-content">
 			<h1 class="main-title visually-hidden">Антигистаминные препараты в клинических рекомендациях</h1>
 			<div class="wrapper">
         <div class="main-navigation navigation">
@@ -378,9 +377,9 @@
 			<section class="main-block text-block text-block--8" id="block7">
 				<div class="wrapper">
 					<h2 class="text-block__title">Хифенадин (фенкарол®)</h2>
-				<!-- </div> -->
+				 <!-- </div> -->
 				  <div class="text-block__content">
-						<div class="wrapper">
+						<!-- <div class="wrapper"> -->
               <p>
 								Результаты экспериментальных и клинических исследований 
 								подтверждают высокую противоаллергическую и противозудную 
@@ -395,7 +394,8 @@
 								который разрушает гистамин, что в совокупности обусловливает 
 								дополнительный противозудный и противоаллергический эффект.
 							</p>
-						</div>
+					</div>		
+				</div>
 						<div class="wrapper wrapper--wide">
 							<div class="text-block__image"><img src="img/scheme.png" alt="Картинка" class="img-responsive"></div>
             </div>
