--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 						</li>
 						<li class="navigation__item">
 							<a href="#block6" class="navigation__link">
-								Хифенадин (Фенкарол®) — неседативный антигистаминный препарат
+								Хифенадин (Фенкарол<sup>®</sup>) — неседативный антигистаминный препарат
 							</a>
 						</li>
 						<li class="navigation__item">
@@ -336,7 +336,7 @@
 			</section>
 			<section class="main-block text-block text-block--7" id="block6">
 				<div class="wrapper">
-					<h2 class="text-block__title">Хифенадин (Фенкарол®) — неседативный антигистаминный препарат</h2>
+					<h2 class="text-block__title">Хифенадин (Фенкарол<sup>®</sup>) — неседативный антигистаминный препарат</h2>
 					<div class="text-block__content">
 						<p>
 							Производные хинуклидина лишены наиболее значимых 
@@ -376,7 +376,7 @@
 			</section>
 			<section class="main-block text-block text-block--8" id="block7">
 				<div class="wrapper">
-					<h2 class="text-block__title">Хифенадин (фенкарол®)</h2>
+					<h2 class="text-block__title">Хифенадин (фенкарол<sup>®</sup>)</h2>
 				  <div class="text-block__content">
 						<p>
 							Результаты экспериментальных и клинических исследований 
@@ -386,7 +386,7 @@
 						</p>
 						<p>
 							Отличительной особенностью производных хинуклидина
-							(в том числе <span>Фенкарола®</span>) является наличие дополнительных 
+							(в том числе <span>Фенкарола<sup>®</sup></span>) является наличие дополнительных 
 							свойств, в частности способности блокировать Н1-серотониновые 
 							рецепторы и <span>активировать фермент диаминоксидазу (гистаминазу)</span>, 
 							который разрушает гистамин, что в совокупности обусловливает 
@@ -398,15 +398,18 @@
 							<div class="text-block__image"><img src="img/scheme.png" alt="Картинка" class="img-responsive"></div>
             </div>
 						<div class="wrapper">
-							<p>
-								Хифенадин <span>(Фенкарол®)</span> выпускается <span>не только в виде 
-								таблетированной лекарственной формы, но также и инъекционной</span>. 
-								При применении инъекционной лекарственной формы (раствор для внутримышечного введения) 
-								отмечается достоверно меньшая частота развития нежелательных эффектов, 
-								в частности отсутствие седативного эффекта, угнетения сознания, 
-								в отличие от инъекционных препаратов первого поколения. Это является 
-								важным преимуществом для пациентов при неотложных состояниях.
-							</p>
+							<div class="text-block__content">
+                <p>
+									Хифенадин <span>(Фенкарол<sup>®</sup>)</span> выпускается <span>не только в виде 
+									таблетированной лекарственной формы, но также и инъекционной</span>. 
+									При применении инъекционной лекарственной формы (раствор для внутримышечного введения) 
+									отмечается достоверно меньшая частота развития нежелательных эффектов, 
+									в частности отсутствие седативного эффекта, угнетения сознания, 
+									в отличие от инъекционных препаратов первого поколения. Это является 
+									важным преимуществом для пациентов при неотложных состояниях.
+								</p>
+							</div>
+							
 						</div>
 					</div>
 				</div>
