--- a/index.html
+++ b/index.html
@@ -207,7 +207,7 @@
 					<div class="wrapper wrapper--wide">
             <ul class="text-block__cards">
 							<li class="text-block__card card">
-								<div class="card__image">
+								<div class="card__imag">
 									<img src="img/svg/Tab.svg" alt="Иконка" class="img-responsive">
 								</div>
 								<p class="card__text">
@@ -217,7 +217,7 @@
 								</p>
 							</li>
 							<li class="text-block__card card">
-								<div class="card__image">
+								<div class="card__imag">
 									<img src="img/svg/Hand.svg" alt="Иконка" class="img-responsive">
 								</div>
 								<p class="card__text">
@@ -226,7 +226,7 @@
 								</p>
 							</li>
 							<li class="text-block__card card">
-								<div class="card__image">
+								<div class="card__imag">
 									<img src="img/svg/Circle.svg" alt="Иконка" class="img-responsive">
 								</div>
 								<p class="card__text">
