scroll button, color blocks

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <link rel="stylesheet" href="css/style.min.css">
 </head>
 <body>
-	<header class="main-header">
+	<header class="main-header" id="intro">
 			<img src="img/Bunner.png" alt="Антигистаминные препараты в клинических рекомендациях">
 	</header>
 	<div class="main-wrapper">
@@ -330,9 +330,21 @@
               Нозологии, при которых применяются антигистаминные препараты 
 							(согласно профильным клиническим рекомендациям).
 						</p>
-						<a href="pdf/nozologii pri kotorih.pdf" download class="button download-button">Скачать таблицу</a>
+						<a href="pdf/nozologii-pri-kotorih.pdf" download class="button download-button">Скачать таблицу</a>
 					</div>
+					<img class="bg-image bg-image--1" src="img/mascot-2.png" alt="">
+					<img class="bg-image bg-image--2" src="img/icon-bg-1.png" alt="">
+					<img class="bg-image bg-image--3" src="img/icon-bg-2.png" alt="">
+					<img class="bg-image bg-image--4" src="img/icon-bg-3.png" alt="">
+					<img class="bg-image bg-image--5" src="img/icon-bg-4.png" alt="">
+					<img class="bg-image bg-image--6" src="img/icon-bg-5.png" alt="">
+					<img class="bg-image bg-image--7" src="img/icon-bg-6.png" alt="">
+					<img class="bg-image bg-image--8" src="img/icon-bg-1.png" alt="">
+					<img class="bg-image bg-image--9" src="img/icon-bg-7.png" alt="">
+					<img class="bg-image bg-image--10" src="img/icon-bg-8.png" alt="">
+					<img class="bg-image bg-image--11" src="img/icon-bg-9.png" alt="">
 				</div>
+				
 			</section>
 			<section class="main-block text-block text-block--7" id="block6">
 				<div class="wrapper">
@@ -409,7 +421,6 @@
 									важным преимуществом для пациентов при неотложных состояниях.
 								</p>
 							</div>
-							
 						</div>
 					</div>
 				</div>
@@ -440,10 +451,15 @@
 
 		</main>	
 	</div>
-	<!-- </div> -->
-  
-
+	<div class="outline">RUFEN2602 19.11.2023</div>
 	
+  <div id="button-to-intro" class="longread__nav-button" style="display: flex;">
+	  <a href="#intro" class="longread__button-icon">
+	    <svg xmlns="http://www.w3.org/2000/svg" width="24" height="18" viewBox="0 2 24 24">
+				<path d="M0 16.67l2.829 2.83 9.175-9.339 9.167 9.339 2.829-2.83-11.996-12.17z"></path>
+			</svg>
+	  </a>
+	</div>
   <script src="js/main.min.js"></script>
 </body>
 </html>
